# keisan-card

./: Cargo.toml  Dioxus.toml  README.md
docs/: index.html
docs/assets/dioxus/: keisan-card.js  keisan-card_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
public/: tailwind.css
src/: algolism.rs  main.rs
