[package]
name = "keisan-card"
version = "0.1.0"
authors = ["wakakusa <wakakusaeng@outlook.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }
chrono = "0.4.30"
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5", features = ["getrandom"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"

